myjss : add scope component and management

--- a/client-myjss/src/app/modules/my-account/components/account-menu/account-menu.component.html
+++ b/client-myjss/src/app/modules/my-account/components/account-menu/account-menu.component.html
@@ -6,13 +6,14 @@
     <div class="offcanvas-body">
       <div class="pb-2 pb-lg-0 mb-4 mb-lg-5">
         <avatar class="avatar-select" [user]="currentUser" [size]="70" [centerAvatar]="false"></avatar>
-        <h3 class="h5 mb-1">{{currentUser.firstname}} {{currentUser.lastname}}</h3>
-        <p class="fs-sm text-body-secondary mb-0">{{currentUser.email}}</p>
+        <h3 class="h5 mb-1">{{capitalizeName(currentUser.firstname + " " +currentUser.lastname)}}</h3>
+        <p class="fs-sm text-body-secondary mb-0">{{currentUser.mail.mail}}</p>
       </div>
       <nav class="nav flex-column pb-2 pb-lg-4 mb-3">
         <h4 class="fs-xs fw-medium text-body-secondary text-uppercase pb-1 mb-2">Mon compte</h4>
         <ng-container *ngFor="let menuItem of menuItems">
-          <a class="nav-link fw-semibold py-2 px-0 active" [routerLink]="menuItem.route"
+          <a class="nav-link fw-semibold py-2 px-0"
+            [ngClass]="{'active':  getCurrentRoute().indexOf(menuItem.route)>=0}" [routerLink]="menuItem.route"
             *ngIf="menuItem.mainItem==MAIN_ITEM_ACCOUNT">
             <i class="fs-5 opacity-60 me-2" [ngClass]="menuItem.iconClass"></i>
             {{menuItem.label}}
@@ -22,7 +23,8 @@
       <nav class="nav flex-column pb-2 pb-lg-4 mb-1">
         <h4 class="fs-xs fw-medium text-body-secondary text-uppercase pb-1 mb-2">Tableau de bord</h4>
         <ng-container *ngFor="let menuItem of menuItems">
-          <a class="nav-link fw-semibold py-2 px-0 active" [routerLink]="menuItem.route"
+          <a class="nav-link fw-semibold py-2 px-0 "
+            [ngClass]="{'active':  getCurrentRoute().indexOf(menuItem.route)>=0}" [routerLink]="menuItem.route"
             *ngIf="menuItem.mainItem==MAIN_ITEM_DASHBOARD">
             <i class="fs-5 opacity-60 me-2" [ngClass]="menuItem.iconClass"></i>
             {{menuItem.label}}
