--- a/client-myjss/src/app/modules/my-account/components/scope/scope.component.html
+++ b/client-myjss/src/app/modules/my-account/components/scope/scope.component.html
@@ -1,12 +1,12 @@
 <h1 class="h2 mb-4">Vue d'ensemble</h1>
 
 
-<section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4" *ngIf="potentialResponsables && currentUser && currentScope">
+<section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4">
   <div class="card-body">
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
-      <i class="ai-cart text-primary lead pe-1 me-2"></i>
+      <i class="ai-grid text-primary lead pe-1 me-2"></i>
       <h2 class="h4 mb-0">Mon périmètre</h2>
-      <div class="ms-auto">
+      <div class="ms-auto" *ngIf="potentialResponsables && currentUser && currentScope">
         <a class="btn btn-sm btn-secondary ms-auto" style="margin-right: 10px;"
           (click)="selectAll();$event.stopPropagation()">Sélectionner tout</a>
         <a class="btn btn-sm btn-secondary ms-auto" (click)="unselectAll();$event.stopPropagation()">Déselectionner
@@ -20,26 +20,58 @@
           votre compte</div>
       </div>
     </div>
-    <ng-container *ngFor="let tiers of allTiers">
-      <div class="d-flex align-items-center pb-1 mb-2">
-        <h3 class="h6 mb-0 me-3">{{capitalizeName(getTiersLabel(tiers))}} {{tiers.city ? (" - "+tiers.city.label) : ""}}
-        </h3>
+    <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3" *ngIf="isLoading">
+      <div class="list-group" style="min-width: 200px;">
+        <label class="list-group-item">
+          <p class="card-text placeholder-glow">
+            <span class="placeholder placeholder-sm col-7 me-2 "></span>
+          </p>
+        </label>
+        <label class="list-group-item">
+          <p class="card-text placeholder-glow">
+            <span class="placeholder placeholder-sm col-7 me-2 "></span>
+          </p>
+        </label>
+        <label class="list-group-item">
+          <p class="card-text placeholder-glow">
+            <span class="placeholder placeholder-sm col-7 me-2 "></span>
+          </p>
+        </label>
+        <label class="list-group-item">
+          <p class="card-text placeholder-glow">
+            <span class="placeholder placeholder-sm col-7 me-2 "></span>
+          </p>
+        </label>
+        <label class="list-group-item">
+          <p class="card-text placeholder-glow">
+            <span class="placeholder placeholder-sm col-7 me-2 "></span>
+          </p>
+        </label>
       </div>
-      <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
-        <div class="list-group">
-          <ng-container *ngFor="let responsable of potentialResponsables">
-            <label class="list-group-item" *ngIf="responsable.tiers.id == tiers.id">
-              <input class="form-check-input me-2" type="checkbox" [checked]="isInScope(responsable)" value=""
-                [(ngModel)]="responsableStatus[responsable.id]"
-                (change)="toggleScope(responsable,responsableStatus[responsable.id])">
-              {{capitalizeName(responsable.firstname + " " +responsable.lastname)}}
-            </label>
-          </ng-container>
+    </div>
+    <ng-container *ngIf="potentialResponsables && currentUser && currentScope">
+      <ng-container *ngFor="let tiers of allTiers">
+        <div class="d-flex align-items-center pb-1 mb-2">
+          <h3 class="h6 mb-0 me-3">{{capitalizeName(getTiersLabel(tiers))}} {{tiers.city ? (" - "+tiers.city.label) :
+            ""}}
+          </h3>
         </div>
-      </div>
+        <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
+          <div class="list-group">
+            <ng-container *ngFor="let responsable of potentialResponsables">
+              <label class="list-group-item" *ngIf="responsable.tiers.id == tiers.id">
+                <input class="form-check-input me-2" type="checkbox" [checked]="isInScope(responsable)" value=""
+                  [(ngModel)]="responsableStatus[responsable.id]"
+                  (change)="toggleScope(responsable,responsableStatus[responsable.id])">
+                {{capitalizeName(responsable.firstname + " " +responsable.lastname)}}
+              </label>
+            </ng-container>
+          </div>
+        </div>
+      </ng-container>
     </ng-container>
   </div>
-  <div class="col-12 d-flex justify-content-end pt-3">
+  <div class="col-12 d-flex justify-content-end pt-3" *ngIf="potentialResponsables && currentUser && currentScope">
     <button class="btn btn-primary ms-3" type="button" (click)="saveScope()">Enregistrer</button>
   </div>
 </section>
