--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -83,6 +83,10 @@
         <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
           <i class="ai-wallet text-primary lead pe-1 me-2"></i>
           <h2 class="h4 mb-0">Facturation</h2>
+          <a class="btn btn-sm btn-secondary ms-auto" href="account-settings.html">
+            <i class="ai-edit ms-n1 me-2"></i>
+            Payer le solde <!-- page de paiement CB + instruction de virement -->
+          </a>
         </div>
         <div class="d-flex align-items-center pb-1 mb-2">
           <h3 class="h6 mb-0 me-3">Paiements reçus</h3>
