--- a/client/src/app/routing/sidenav-list/sidenav-list.component.scss
+++ b/client/src/app/routing/sidenav-list/sidenav-list.component.scss
@@ -2,7 +2,7 @@
 @use '@angular/material' as mat;
 
 @mixin color($theme) {
-  $color-config: mat.m2-get-color-config($theme);
+  $color-config: mat.get-color-config($theme);
 
   $accent-palette: map.get($color-config, 'accent');
 
@@ -10,11 +10,11 @@
 
   .nav-list-main-menu a:hover,
   .menu-item-active {
-    background: mat.m2-get-color-from-palette($accent-palette, main);
+    background: mat.get-color-from-palette($accent-palette, main);
   }
 
   .nav-list-main-menu a {
-    border: 1px solid mat.m2-get-color-from-palette($accent-palette, main);
+    border: 1px solid mat.get-color-from-palette($accent-palette, main);
   }
 
   .nav-list-main-menu a:hover .mdc-list-item__primary-text,
@@ -23,13 +23,13 @@
   }
 
   .light .nav-list-main-menu .menu-item-active .mdc-list-item__primary-text {
-    color: mat.m2-get-color-from-palette($accent-palette, lighter) !important;
+    color: mat.get-color-from-palette($accent-palette, lighter) !important;
   }
 
 }
 
 @mixin theme($theme) {
-  $color-config: mat.m2-get-color-config($theme);
+  $color-config: mat.get-color-config($theme);
 
   @if $color-config !=null {
     @include color($theme);
