--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
@@ -86,7 +86,7 @@
     <tr mat-header-row class="sticky" *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="rowClicked(row)" [ngClass]="{'pointer':onRowClick && onRowClick.observers && onRowClick.observers.length>0,
       'selected-mat-row':idRowSelected && row.id && idRowSelected==row.id,
-      'color-warn':true}">
+      'color-warn':false}">
     </tr>
   </table>
   <mat-icon color="accent" class="export-icon pointer" matTooltip="Exporter en Excel"
