--- a/client-myjss/src/app/modules/miscellaneous/components/generic-input/generic-input.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/generic-input/generic-input.component.html
@@ -1,9 +1,12 @@
-<div [formGroup]="form!" class="needs-validation">
-  <i class="ai-mail fs-lg position-absolute top-50 start-0 translate-middle-y ms-3"
-    [ngClass]="{'icon-with-error':errorMessage && form!.controls[propertyName].hasError('notFilled')}"></i>
-  <input class="form-control form-control-lg ps-5" type="text" [id]="'fl-text'+uniqueId" [maxlength]="maxLength+''"
-    [minlength]="minLength+''" [formControlName]="propertyName" [placeholder]="label" (blur)="blurForm()"
-    [type]="type=='number'?'text':type" (change)="parse($event)">
-  <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length>0">{{label}}</label>
-  <div class="error" *ngIf="errorMessage && form!.controls[propertyName].hasError('notFilled')">{{errorMessage}}</div>
+<div class="position-relative ">
+  <div [formGroup]="form!" class="needs-validation">
+    <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length>0"
+      class="form-label">{{label}}</label>
+    <i class=" fs-lg position-absolute top-50 start-0 ms-3" *ngIf="icon" [ngClass]="{'icon-with-error':errorMessage && form!.controls[propertyName].hasError('notFilled'),
+      'translate-middle-y' : !isDisplayLabel,'translate-quarter-y' : isDisplayLabel}" [class]="'ai-'+icon"></i>
+    <input class="form-control form-control ps-5" type="text" [id]="'fl-text'+uniqueId" [maxlength]="maxLength+''"
+      [minlength]="minLength+''" [formControlName]="propertyName" [placeholder]="label" (blur)="blurForm()"
+      (keyup.enter)="onEnterTrigger($event)" [type]="type=='number'?'text':type" (change)="parse($event)">
+    <div class="error" *ngIf="errorMessage && form!.controls[propertyName].hasError('notFilled')">{{errorMessage}}</div>
+  </div>
 </div>
