--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -1,4 +1,4 @@
-<h1 class="h2 mb-4">Vue d'ensemble</h1>
+<h1 class="h2 mb-4">Tableau de bord</h1>
 
 <!-- Basic info -->
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 mb-4" *ngIf="currentUser">
