--- a/client-myjss/src/app/modules/my-account/components/sign-in/sign-in.component.html
+++ b/client-myjss/src/app/modules/my-account/components/sign-in/sign-in.component.html
@@ -12,10 +12,9 @@
     <div class="w-100 mt-auto" style="max-width: 526px;">
       <h1>Se connecter à MyJSS</h1>
       <div class="pb-3 mb-3">
-        <div class="position-relative ">
-          <generic-input [(model)]="inputMail" label="Votre adresse mail" [form]="signinForm" propertyName="inputMail"
-            [isMandatory]="true" [isDisabled]="false" type="mail" [isDisplayLabel]="false"></generic-input>
-        </div>
+        <generic-input [(model)]="inputMail" label="Votre adresse mail" [form]="signinForm" propertyName="inputMail"
+          [isMandatory]="true" [isDisabled]="false" type="mail" [isDisplayLabel]="false"
+          [icon]="'mail'"></generic-input>
       </div>
       <button class="btn btn-lg btn-primary w-100 mb-4" (click)="sendConnectionLink()">Recevoir un lien de
         connexion</button>
